@@ -1,0 +1,8 @@
+
+import pytest
+from devpi.index import *
+
+def test_index_show_empty(loghub):
+    with pytest.raises(SystemExit):
+        index_show(loghub, None)
+    loghub._getmatcher().fnmatch_lines("*no index specified*")
